--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <tr>
         <td>
          <h2>Welcome to FG Degree College Hyderabad</h2>
-         <img src="photos/new.jpg" alt="College" width="100%" >
+         <img src="photos/first.jpg" alt="College" width="100%" >
         <p>
             FG Degree College is one of the leading educational institutes providing quality education with modern facilities. We focus on academic excellence and character building.
         </p>
@@ -314,4 +314,5 @@
     
 
     </body>
+
 </html>
